# P-box_expansion_planning

./: .gitignore  AGENTS.md  Literature_review_combined.md  Makefile  README.md  actionable_project_plan_agentic.md  agent_instructions.md  environment.yml  project_plan_v3_when_can_grid_reinforcement_wait.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
configs/: agent_ownership.json  bootstrap_manifest.yaml  scenarios.yaml
data/: README.md  critical_weeks.csv  get_elaad_profiles.py  get_elaadnl.py  get_ev_adequacy_preflight.py  get_ev_component_outputs.py  get_hp_scaling.py  get_ndw_charging_inventory.py  get_pv_capacity.py  get_simbench.py  get_unit_costs.py  get_weather_pv.py  get_when2heat.py  import_windows.csv  sources.py  transformer_headroom_diagnostic.csv
experiments/: README.md
notebooks/: README.md
paper/: README.md  methods_decisions_and_assumptions.md
registers/: ASSUMPTIONS.md  DATA_REGISTER.md  DECISIONS.md  OWNERSHIP_EXCEPTIONS.json  QUESTIONS.md  RISKS.md  STATUS.md
reports/: AGENT_A_LOG.md  AGENT_B_LOG.md  AGENT_C_LOG.md  BENCHMARK.md  BENCHMARK_TIMESERIESCPP.md  E0_S3b_runner_retrofit.md  E1_S4_G0_A3_THRESHOLD_DEFAULT.md  E3_S1_FLEX_EXPORT_HARDENING.md  E3_S2A_LIBRARY_ADEQUACY_DESIGN_SUPPORT.md  E3_S2B_CAPACITY_PROVENANCE.md  E3_S2B_E3S3_PRERUN_CONFIG_SKELETON.md  E3_S2B_INTEGRATED_PRERUN_READINESS.md  E3_S2_ACCEPTED_ARTIFACT_BLOCKER_PREFLIGHT.md  E3_S2_ADAPTER_ARTIFACT_BRIDGE.md  E3_S2_EXECUTABLE_BRIDGE_PREFLIGHT.md  E3_S2_EXECUTABLE_INPUT_GATE.md  E3_S2_EXECUTABLE_READINESS_PREFLIGHT.md  E3_S2_IC1_ASSEMBLY_PLAN_READINESS.md  E3_S2_IC2_LOADING_TRAJECTORY_SCAFFOLD.md  E3_S2_LOADING_INPUT_READINESS.md  E3_S2_METADATA_ADAPTER_SKELETONS.md  E3_S2_REAL_ARTIFACT_ASSEMBLY_PREFLIGHT.md  E3_S2_REAL_COMPONENT_WIRING_PLAN.md  E3_S2_REAL_IC1_PREFLIGHT.md  E3_S2_REGISTRY_OUTPUT_READINESS.md  E3_S2_SCREEN_PREFLIGHT_ARTIFACTS.md  E3_S2_SYNTHETIC_ASSEMBLY_REAL_GATE.md  E5_S3_OUTPUT_ERROR_SCHEMA_PROPOSAL.md  EV003_ADVANCED_RESEARCH_RESPONSE.md  (+194 more)
(+460 files in other folders)
