[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pbox-expansion-planning"
version = "0.1.0"
description = "P-box uncertainty propagation for flexibility-aware distribution grid reinforcement deferral."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "hypothesis>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

